# nidhi

./: BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bump-version.sh  codecov.yml  cyrius.cyml
benches/: benchmarks.rs
docs/: benchmarks-rust-v-cyrius.md
docs/adr/: README.md
docs/development/: roadmap.md  state.md
docs/guides/: getting-started.md
docs/port/: 01-PLAN.md  10-cyrius-language.md  11-cyrius-stdlib.md  12-vidya-port-template.md  13-hisab-lib-template.md  15-audio-representation.md  16-serde-and-testing.md  20-mod-core.md  21-mod-sample.md  22-mod-dsp.md  23-mod-engine.md  24-mod-sf2.md  25-mod-sfz.md  26-mod-io-bench.md
fuzz/: fuzz_sf2.fcyr  fuzz_sfz.fcyr
fuzz/fuzz_targets/: fuzz_sf2.rs  fuzz_sfz.rs
lib/: alloc.cyr  naad.cyr  shravan.cyr  syscalls_windows.cyr  syscalls_x86_64_agnos.cyr  syscalls_x86_64_linux.cyr
programs/: smoke.cyr
rust-old/benches/: benchmarks.rs
rust-old/fuzz/: Cargo.toml
rust-old/src/: lib.rs  loop_mode.rs  sf2.rs  sfz.rs
src/: capture.cyr  capture.rs  effect_chain.cyr  effect_chain.rs  engine.cyr  engine.rs  envelope.cyr  envelope.rs  error.cyr  error.rs  f64_util.cyr  instrument.cyr  instrument.rs  io.cyr  io.rs  lib.rs  loop_mode.cyr  loop_mode.rs  sample.cyr  sample.rs  sf2.cyr  sf2.rs  sfz.cyr  sfz.rs  stretch.cyr  stretch.rs  zone.cyr  zone.rs
tests/: capture.tcyr  effect_chain.tcyr  engine.tcyr  envelope.tcyr  foundation.tcyr  instrument.tcyr  io.tcyr  naad_link.tcyr  nidhi.bcyr  nidhi.fcyr  nidhi.tcyr  sample.tcyr  sf2.tcyr  sfz.tcyr  stretch.tcyr  zone.tcyr
